[package]
name = "pulldown-cmark-to-cmark"
version = "3.0.0"
authors = ["Sebastian Thiel <byronimo@gmail.com>", "Dylan Owen <dyltotheo@gmail.com>"]

description = "Convert pulldown-cmark Events back to the string they were parsed from"
license = "Apache-2.0"
keywords = ["markdown", "common-mark", "render", "converter"]
repository = "https://github.com/Byron/pulldown-cmark-to-cmark"
homepage = "https://github.com/Byron/pulldown-cmark-to-cmark"
documentation = "https://docs.rs/crate/pulldown-cmark-to-cmark"
readme = "README.md"
exclude = ["tests", "examples"]
edition = "2018"

[dependencies]
pulldown-cmark = { version = "0.7.0", default-features = false }

[dev-dependencies]
indoc = "0.3.4"
pretty_assertions = "0.6.1"
