[package]
name = "pulldown-cmark-to-cmark-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
pulldown-cmark = { version = "0.9.0", default-features = false }

[dependencies.pulldown-cmark-to-cmark]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "round-trip"
path = "fuzz_targets/round-trip.rs"
test = false
doc = false
